--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 *.userosscache
 *.sln.docstates
 
+MordhauVoices/_UnityProject/*
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
