--- a/MordhauVoices/src/MordhauVoices.csproj
+++ b/MordhauVoices/src/MordhauVoices.csproj
@@ -4,21 +4,21 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A04C2627-6B42-4114-9D81-49F953F0FE11}</ProjectGuid>
+    <ProjectGuid>{901943A9-EDE9-4448-ACA3-516FE4552458}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <LangVersion>9.0</LangVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ModPack</RootNamespace>
-    <AssemblyName>ModPack</AssemblyName>
+    <RootNamespace>MordhauVoices</RootNamespace>
+    <AssemblyName>MordhauVoices</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <LangVersion>9.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>false</DebugSymbols>
-    <DebugType>none</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\Release\SinaisModPack\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -33,32 +33,32 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="0Harmony, Version=2.6.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\HarmonyX.2.6.1\lib\net45\0Harmony.dll</HintPath>
+    <Reference Include="0Harmony, Version=2.9.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\HarmonyX.2.9.0\lib\net45\0Harmony.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp-firstpass_publicized">
-      <HintPath>..\lib\Assembly-CSharp-firstpass_publicized.dll</HintPath>
+      <HintPath>..\..\lib\Assembly-CSharp-firstpass_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp_publicized">
-      <HintPath>..\lib\Assembly-CSharp_publicized.dll</HintPath>
+      <HintPath>..\..\lib\Assembly-CSharp_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="BepInEx, Version=5.4.15.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\BepInEx.BaseLib.5.4.16\lib\net35\BepInEx.dll</HintPath>
+    <Reference Include="BepInEx, Version=5.4.17.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\BepInEx.BaseLib.5.4.17\lib\net35\BepInEx.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="bolt.user_publicized">
-      <HintPath>..\lib\bolt.user_publicized.dll</HintPath>
+      <HintPath>..\..\lib\bolt.user_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="bolt_publicized">
-      <HintPath>..\lib\bolt_publicized.dll</HintPath>
+      <HintPath>..\..\lib\bolt_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="ch.sycoforge.Decal_publicized">
-      <HintPath>..\lib\ch.sycoforge.Decal_publicized.dll</HintPath>
+      <HintPath>..\..\lib\ch.sycoforge.Decal_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Mono.Cecil, Version=0.11.4.0, Culture=neutral, PublicKeyToken=50cebf1cceb9d05e, processorArchitecture=MSIL">
@@ -77,83 +77,84 @@
       <HintPath>packages\Mono.Cecil.0.11.4\lib\net40\Mono.Cecil.Rocks.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="MonoMod.RuntimeDetour, Version=21.11.1.1, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\MonoMod.RuntimeDetour.21.11.1.1\lib\net452\MonoMod.RuntimeDetour.dll</HintPath>
+    <Reference Include="MonoMod.RuntimeDetour, Version=22.1.29.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\MonoMod.RuntimeDetour.22.1.29.1\lib\net452\MonoMod.RuntimeDetour.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="MonoMod.Utils, Version=21.11.1.1, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\MonoMod.Utils.21.11.1.1\lib\net452\MonoMod.Utils.dll</HintPath>
+    <Reference Include="MonoMod.Utils, Version=22.1.29.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\MonoMod.Utils.22.1.29.1\lib\net452\MonoMod.Utils.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Photon3Unity3D_publicized">
-      <HintPath>..\lib\Photon3Unity3D_publicized.dll</HintPath>
+      <HintPath>..\..\lib\Photon3Unity3D_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="PhotonBolt_publicized">
-      <HintPath>..\lib\PhotonBolt_publicized.dll</HintPath>
+      <HintPath>..\..\lib\PhotonBolt_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="PhotonRealtime_publicized">
-      <HintPath>..\lib\PhotonRealtime_publicized.dll</HintPath>
+      <HintPath>..\..\lib\PhotonRealtime_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="PhotonWebSocket_publicized">
-      <HintPath>..\lib\PhotonWebSocket_publicized.dll</HintPath>
+      <HintPath>..\..\lib\PhotonWebSocket_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Rewired_Core_publicized">
-      <HintPath>..\lib\Rewired_Core_publicized.dll</HintPath>
+      <HintPath>..\..\lib\Rewired_Core_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Rewired_Windows_publicized">
-      <HintPath>..\lib\Rewired_Windows_publicized.dll</HintPath>
+      <HintPath>..\..\lib\Rewired_Windows_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Sirenix.OdinInspector.Attributes_publicized">
-      <HintPath>..\lib\Sirenix.OdinInspector.Attributes_publicized.dll</HintPath>
+      <HintPath>..\..\lib\Sirenix.OdinInspector.Attributes_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Sirenix.OdinInspector.CompatibilityLayer_publicized">
-      <HintPath>..\lib\Sirenix.OdinInspector.CompatibilityLayer_publicized.dll</HintPath>
+      <HintPath>..\..\lib\Sirenix.OdinInspector.CompatibilityLayer_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Sirenix.Serialization.Config_publicized">
-      <HintPath>..\lib\Sirenix.Serialization.Config_publicized.dll</HintPath>
+      <HintPath>..\..\lib\Sirenix.Serialization.Config_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Sirenix.Serialization_publicized">
-      <HintPath>..\lib\Sirenix.Serialization_publicized.dll</HintPath>
+      <HintPath>..\..\lib\Sirenix.Serialization_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Sirenix.Utilities_publicized">
-      <HintPath>..\lib\Sirenix.Utilities_publicized.dll</HintPath>
+      <HintPath>..\..\lib\Sirenix.Utilities_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="udpkit.common_publicized">
-      <HintPath>..\lib\udpkit.common_publicized.dll</HintPath>
+      <HintPath>..\..\lib\udpkit.common_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="udpkit.platform.dotnet_publicized">
-      <HintPath>..\lib\udpkit.platform.dotnet_publicized.dll</HintPath>
+      <HintPath>..\..\lib\udpkit.platform.dotnet_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="udpkit.platform.null_publicized">
-      <HintPath>..\lib\udpkit.platform.null_publicized.dll</HintPath>
+      <HintPath>..\..\lib\udpkit.platform.null_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="udpkit.platform.photon_publicized">
-      <HintPath>..\lib\udpkit.platform.photon_publicized.dll</HintPath>
+      <HintPath>..\..\lib\udpkit.platform.photon_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="udpkit_publicized">
-      <HintPath>..\lib\udpkit_publicized.dll</HintPath>
+      <HintPath>..\..\lib\udpkit_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -333,7 +334,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.UI_publicized">
-      <HintPath>..\lib\UnityEngine.UI_publicized.dll</HintPath>
+      <HintPath>..\..\lib\UnityEngine.UI_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.UmbraModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -402,25 +403,23 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cheats\Cheats.cs" />
-    <Compile Include="ContainerTweaks\ContainerTweaks.cs" />
-    <Compile Include="CustomStackSizes\CustomStackSizes.cs" />
-    <Compile Include="InGameMap\MapType.cs" />
-    <Compile Include="InGameMap\MarkerBase.cs" />
-    <Compile Include="InGameMap\CachedMapZone.cs" />
-    <Compile Include="InGameMap\CachedPlayer.cs" />
-    <Compile Include="InGameMap\MarkerType.cs" />
-    <Compile Include="InGameMap\Pool.cs" />
-    <Compile Include="InGameMap\InGameMap.cs" />
-    <Compile Include="CustomTimeSpeed\CustomTimeSpeed.cs" />
-    <Compile Include="SubPlugin.cs" />
-    <Compile Include="StrandedDeepModPack.cs" />
+    <Compile Include="Menu.cs" />
+    <Compile Include="Plugin.cs" />
+    <Compile Include="Patches.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RPC\IVoiceLineEventListener.cs" />
+    <Compile Include="RPC\RPCManager.cs" />
+    <Compile Include="RPC\VoiceLineEvent.cs" />
+    <Compile Include="RPC\VoiceLineEvent_Meta.cs" />
+    <Compile Include="Voices\Voice.cs" />
+    <Compile Include="Voices\VoicePlayer.cs" />
+    <Compile Include="Voices\VoiceLineTypes.cs" />
+    <Compile Include="Voices\VoiceLibrary.cs" />
+    <Compile Include="Voices\VoiceTypes.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
